Fix fullscreen iframe in IE to remove horizontal scrolling

--- a/interprovince-migration/style.css
+++ b/interprovince-migration/style.css
@@ -42,7 +42,7 @@ section {
 }
 
 .full-screen {
-  width: 100vw;
+  width: 100%;
   height: calc(100vh - 56px);
   margin: 25px 0;
 }
